--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,7 +3,7 @@
     font-weight: 900;
     font-size: 3.375rem;
     line-height: 3.625rem;
-    margin: 9.1vw 0 4.1vw;
+    margin:0 0 40px;
 }
 
 @media only screen and (max-width:767px) {
