--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -13,11 +13,24 @@
 }
 
 .card+.card {
-    margin-top: 8.8vw;
+    margin-top: 48px;
 }
 
-@media only screen and (min-width: 320px) and (max-width:767px) {
+@media only screen  and (max-width:767px) {
     .card {
         display: block;
+    }
+    .card+.card {
+        margin-top: 8.8vw;
+    }
+}
+@media only screen  and (min-width:768px) and (max-width:1023px){
+    .card+.card {
+        margin-top: 72px;
+    }
+}
+@media only screen  and (min-width:1024px){
+    .card+.card {
+        margin-top: 80px;
     }
 }
