--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -6,6 +6,7 @@
     z-index: 0;
     background-color: #2A2C2F;
     height: 58vw;
+    max-height: 740px;
     opacity: 0.2;
     width: 100%;
     background-position: center 0;
@@ -15,4 +16,10 @@
 .cover__link:hover~.cover__overlay {
     opacity: 0.8;
     transition: opacity 0.5s linear;
+}
+@media only screen and (min-width: 768px) and (max-width:1023px) {
+    .cover__overlay {
+        
+        height: 480px;
+    }
 }
