--- a/blocks/grid/grid.css
+++ b/blocks/grid/grid.css
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1.6vw;
     justify-content: center;
-    margin: 10vw auto;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 1023px) and (max-width:1279px) {
