--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: 0 auto;
     width: 56%;
-    margin-top: 6.2vw;
+    margin-top: 48px;
     font-style: normal;
     font-weight: 900;
     font-size: 6rem;
@@ -15,5 +15,10 @@
     .lead__title {
         font-size: 2.5rem;
         line-height: 110%;
+    }
+}
+@media only screen and (min-width:1024px){
+    .lead__title{
+        margin-top: 56px;
     }
 }
